tests/bad/strict.js
function notStrict() {
    var foo = 5;
}